[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/pixel.tres" type="DynamicFontData" id=1]
[ext_resource path="res://theme/pixel_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=3]
[ext_resource path="res://animations/slide_in.tres" type="Animation" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 597, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 576, 1024 ) ]
}

[node name="Settings" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 597.0
margin_right = 597.0
custom_constants/margin_right = 100
custom_constants/margin_top = 30
custom_constants/margin_left = 100
custom_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 30.0
margin_right = 476.0
margin_bottom = 1024.0
size_flags_horizontal = 3
custom_constants/separation = 40

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 376.0
margin_bottom = 27.0
text = "<<< Back"

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 376.0
margin_bottom = 112.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1

[node name="MusicCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 376.0
margin_bottom = 186.0
text = "Music"

[node name="SoundCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 226.0
margin_right = 376.0
margin_bottom = 260.0
text = "Sounds"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/slide_in = ExtResource( 4 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MusicCheckBox" to="." method="_on_MusicCheckBox_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/SoundCheckBox" to="." method="_on_SoundCheckBox_toggled"]
